--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-/*#region VARS */
-
-/*#endregion */
-
 /*#region GENERAL STYLES */
 
 @font-face {
@@ -93,9 +89,6 @@ button {
   font-size: 2rem;
 }
 
-.card p {
-}
-
 /*#endregion */
 
 /*#region MAIN HEADER */
@@ -130,16 +123,6 @@ table {
   background: linear-gradient(120deg, rgb(71, 3, 71), rgb(30, 30, 148));
 }
 
-thead {
-  margin: 0 auto;
-
-  border-radius: 10px;
-}
-
-tbody {
-  border-radius: 10px;
-}
-
 tbody tr:nth-child(odd) {
   background: rgba(255, 255, 255, 0.2);
 }
@@ -159,7 +142,7 @@ td {
 }
 
 td:last-child {
-  width: 10%;
+  width: 15%;
   padding: 0;
   height: 1.5rem;
 }
@@ -523,6 +506,86 @@ footer {
   font-size: 1.3rem;
   text-align: center;
   border-top: 1px solid black;
+}
+
+/*#endregion */
+
+/*#region MEDIA QUERIES */
+
+@media only screen and (max-width: 768px) {
+  table {
+    width: 100%;
+  }
+
+  td:last-child {
+    width: 20%;
+    padding: 0;
+    height: 1.5rem;
+  }
+
+  #main-nav .logo {
+    font-size: 1rem;
+    padding: 10px 3px;
+  }
+
+  #main-nav li {
+    width: 2rem;
+    height: 2rem;
+    margin: 0 auto 10px;
+  }
+
+  #main-nav li i {
+    font-size: 1rem;
+  }
+
+  .item-counter {
+    width: 1.5rem;
+    height: 1.5rem;
+    position: absolute;
+    right: 0.5rem;
+    top: 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background: #2a65d3;
+    border: 1px solid rgb(44, 41, 48);
+    border-radius: 50%;
+  }
+
+  #view-section section {
+    padding: 0;
+  }
+
+  .table-controls label,
+  .table-controls p {
+    font-size: 0.8rem;
+  }
+
+  .table-controls select {
+    font-size: 0.8rem;
+  }
+
+  .create-item-button,
+  .update-cart-button {
+    padding: 0.5rem 0.5rem;
+    font-size: 0.8rem;
+  }
+}
+
+@media screen and (orientation: landscape) and (min-device-width: 650px) and (max-device-width: 1024px) {
+  table {
+    width: 100%;
+  }
+
+  #view-section section {
+    padding: 0;
+  }
+
+  th,
+  td {
+    padding: 2px;
+  }
 }
 
 /*#endregion */
