--- a/styles.css
+++ b/styles.css
@@ -578,13 +578,83 @@ footer {
     width: 100%;
   }
 
+  .container {
+    width: 100vw;
+    max-width: 100vw;
+    margin: 0;
+  }
+
+  #main-nav {
+    width: 5vw;
+    max-width: 48px;
+  }
+
   #view-section section {
+    width: 95vw;
     padding: 0;
   }
 
   th,
   td {
-    padding: 2px;
+    font-size: 0.7rem;
+    padding: 0;
+    width: 1%;
+    white-space: nowrap;
+  }
+
+  td:last-child {
+    width: 5%;
+    padding: 0;
+    height: 1.5rem;
+  }
+
+  #main-nav .logo {
+    font-size: 1rem;
+    padding: 10px 3px;
+  }
+
+  #main-nav li {
+    width: 2rem;
+    height: 2rem;
+    margin: 0 auto 10px;
+  }
+
+  #main-nav li i {
+    font-size: 1rem;
+  }
+
+  .item-counter {
+    width: 1.5rem;
+    height: 1.5rem;
+    position: absolute;
+    right: 0.5rem;
+    top: 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background: #2a65d3;
+    border: 1px solid rgb(44, 41, 48);
+    border-radius: 50%;
+  }
+
+  #view-section section {
+    padding: 0;
+  }
+
+  .table-controls label,
+  .table-controls p {
+    font-size: 0.8rem;
+  }
+
+  .table-controls select {
+    font-size: 0.8rem;
+  }
+
+  .create-item-button,
+  .update-cart-button {
+    padding: 0.5rem 0.5rem;
+    font-size: 0.8rem;
   }
 }
 
