--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,6 @@ button {
   display: flex;
   margin: 0 auto;
   border-left: 1px solid black;
-  border-right: 1px solid black;
 }
 
 .hidden {
@@ -517,14 +516,8 @@ footer {
     width: 100%;
   }
 
-  td:last-child {
-    width: 20%;
-    padding: 0;
-    height: 1.5rem;
-  }
-
   #main-nav .logo {
-    font-size: 1rem;
+    font-size: 0.8rem;
     padding: 10px 3px;
   }
 
@@ -539,18 +532,60 @@ footer {
   }
 
   .item-counter {
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 0.9rem;
+    height: 0.9rem;
     position: absolute;
-    right: 0.5rem;
-    top: 1rem;
+    right: 0.3rem;
+    top: 0.8rem;
+    font-size: 0.6rem;
+    font-weight: normal;
+  }
+
+  #view-section section {
+    padding: 0;
+  }
+
+  .username-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 20px;
+  }
+
+  .table-controls {
+    width: 100%;
+  }
+
+  th,
+  td {
+    font-size: 0.7rem;
+    padding: 0;
+    width: 1%;
+    white-space: nowrap;
+  }
+
+  td:last-child {
+    width: 1%;
+    padding: 0;
+    height: 1.5rem;
+  }
+
+  .delete-btn {
+    width: 50%;
+    height: 100%;
     font-size: 1rem;
-    font-weight: bold;
-    text-align: center;
-    color: white;
-    background: #2a65d3;
-    border: 1px solid rgb(44, 41, 48);
-    border-radius: 50%;
+    padding: 5px 15px;
+    cursor: pointer;
+    border: none;
+  }
+
+  .update-btn {
+    width: 50%;
+    height: 100%;
+    font-size: 1rem;
+    padding: 5px 15px;
+    cursor: pointer;
+    border: none;
   }
 
   #view-section section {
@@ -574,88 +609,6 @@ footer {
 }
 
 @media screen and (orientation: landscape) and (min-device-width: 650px) and (max-device-width: 1024px) {
-  table {
-    width: 100%;
-  }
-
-  .container {
-    width: 100vw;
-    max-width: 100vw;
-    margin: 0;
-  }
-
-  #main-nav {
-    width: 5vw;
-    max-width: 48px;
-  }
-
-  #view-section section {
-    width: 95vw;
-    padding: 0;
-  }
-
-  th,
-  td {
-    font-size: 0.7rem;
-    padding: 0;
-    width: 1%;
-    white-space: nowrap;
-  }
-
-  td:last-child {
-    width: 5%;
-    padding: 0;
-    height: 1.5rem;
-  }
-
-  #main-nav .logo {
-    font-size: 1rem;
-    padding: 10px 3px;
-  }
-
-  #main-nav li {
-    width: 2rem;
-    height: 2rem;
-    margin: 0 auto 10px;
-  }
-
-  #main-nav li i {
-    font-size: 1rem;
-  }
-
-  .item-counter {
-    width: 1.5rem;
-    height: 1.5rem;
-    position: absolute;
-    right: 0.5rem;
-    top: 1rem;
-    font-size: 1rem;
-    font-weight: bold;
-    text-align: center;
-    color: white;
-    background: #2a65d3;
-    border: 1px solid rgb(44, 41, 48);
-    border-radius: 50%;
-  }
-
-  #view-section section {
-    padding: 0;
-  }
-
-  .table-controls label,
-  .table-controls p {
-    font-size: 0.8rem;
-  }
-
-  .table-controls select {
-    font-size: 0.8rem;
-  }
-
-  .create-item-button,
-  .update-cart-button {
-    padding: 0.5rem 0.5rem;
-    font-size: 0.8rem;
-  }
 }
 
 /*#endregion */
