--- a/styles.css
+++ b/styles.css
@@ -496,6 +496,20 @@ td:last-child {
   text-align: center;
 }
 
+.purchase-button button {
+  padding: 0.8rem 2rem;
+  font-size: 1rem;
+  color: white;
+  background: rgb(96, 35, 209);
+  border: 1px solid rgb(74, 35, 182);
+  border-radius: 10px;
+}
+
+.purchase-button button:hover {
+  background: rgb(132, 39, 185);
+  border: 1px solid rgb(127, 37, 179);
+}
+
 /*#endregion */
 
 /*#region FOOTER */
@@ -513,7 +527,7 @@ footer {
 
 @media only screen and (max-width: 768px) {
   table {
-    width: 100%;
+    width: 95%;
   }
 
   #main-nav .logo {
@@ -553,7 +567,7 @@ footer {
   }
 
   .table-controls {
-    width: 100%;
+    width: 95%;
   }
 
   .table-controls label,
@@ -576,20 +590,20 @@ footer {
     font-size: 0.7rem;
     padding: 2px;
     width: 1%;
-    white-space: nowrap;
+    word-wrap: break-word;
   }
 
   td:last-child {
+    height: 1.5rem;
     width: 1%;
     padding: 0;
-    height: 1.5rem;
   }
 
   .delete-btn {
     width: 50%;
     height: 100%;
     font-size: 1rem;
-    padding: 5px 15px;
+    padding: 6px;
     cursor: pointer;
     border: none;
   }
@@ -598,7 +612,7 @@ footer {
     width: 50%;
     height: 100%;
     font-size: 1rem;
-    padding: 5px 15px;
+    padding: 6px;
     cursor: pointer;
     border: none;
   }
@@ -616,6 +630,38 @@ footer {
   .card i {
     padding: 0.5rem;
     font-size: 2rem;
+  }
+
+  .cart-counter {
+    width: 1.2rem;
+    margin: 0 auto;
+    display: block;
+    font-size: 0.7rem;
+  }
+
+  #cart td:last-child {
+    width: 1%;
+  }
+
+  #cart .delete-btn {
+    width: 100%;
+    height: 100%;
+    font-size: 0.8rem;
+    padding: 6px;
+  }
+
+  .total-text {
+    font-size: 1rem;
+  }
+
+  .purchase-button {
+    margin-top: 35px;
+    text-align: center;
+  }
+
+  .purchase-button button {
+    padding: 0.5rem 0.5rem;
+    font-size: 0.8rem;
   }
 }
 
@@ -635,6 +681,16 @@ footer {
   #store .card {
     max-width: 40%;
     cursor: pointer;
+  }
+
+  .delete-btn {
+    font-size: 0.8rem;
+    padding: 6px;
+  }
+
+  .update-btn {
+    font-size: 0.8rem;
+    padding: 6px;
   }
 }
 
